<resources>
    <string name="app_name">keznel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hey</string>
    <string name="nav_header_subtitle">123456789</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">update your profile</string>
    <string name="menu_gallery">update your lending materials</string>
    <string name="menu_lending_page">lending page</string>
    <string name="menu_borrowing_page">borrowing page</string>
    <string name="image_recognition">image recognition</string>
    <string name="title_activity_inputdetails">inputdetails</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="things_with_you" />
    <string name="books" />
    <string name="hardware" />
    <string name="guitars" />
    <string name="cycle" />
    <string name="submit" />
    <string name="thing_with_you">Thing with you</string>
    <string name="book">Book</string>
    <string name="cycles">Cycles</string>
    <string name="hardwares">Hardware</string>
    <string name="guitar">Guitars</string>
    <string name="Submit">SUBMIT</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="call">Call</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_splash">splash</string>
</resources>