<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Lend">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="396dp"
        android:layout_height="38dp"
        android:text="@string/thing_with_you"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="100dp"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cb_Books"
        android:text="@string/book"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        />
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cb_Hardware"
        android:text="@string/hardwares"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        />
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cb_Guitars"
        android:text="@string/guitar"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        />
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cb_Cycle"
        android:text="@string/cycles"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        />

    <Button
        android:id="@+id/bt_SUBMIT"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginTop="10dp"
        android:text="@string/Submit" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/output"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal" />
</LinearLayout>